# Course_1

./: .env_template  README.md  main.py  pyproject.toml
data/: reports.csv
htmlcov/: index.html
src/: decorators.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_decorators.py  test_reports.py  test_services.py  test_utils.py  test_views.py
